Right align problem fixed.

--- a/css/app.css
+++ b/css/app.css
@@ -207,10 +207,8 @@ html, body {
 #color-list > li {
     float: left;
 }
-<<<<<<< HEAD
-=======
 
 .paragraph {
     width: 100%;
+    white-space:pre;
 }
->>>>>>> master
